# JustForFun

./: .gitignore  Matrix inverse.cpp  README.md  Resturant HS final project.cpp  alphabet v1.0.cpp  alphabet.cpp  quine-mccluskey v.1.0  quine-mccluskey v.1.0.cpp  quine.cpp
Alphabet v1.0/: CMakeLists.txt  main.cpp  tester.cpp
Alphabet v1.0/alpha_sources/: B.cpp  C.cpp  E.cpp  F.cpp  H.cpp  L.cpp  N.cpp  Q.cpp  Z.cpp
Alphabet v1.0/include/: alphabet.h  alphafunc.h  iofunc.h
Alphabet v1.0/sources/: display.cpp  homescreen.cpp  main.cpp  print.cpp  user input.cpp
Alphabet v1.0/src/: A.cpp  J.cpp  P.cpp  R.cpp  V.cpp  W.cpp  display.cpp  generator.cpp  homepage.cpp  homescreen.cpp  main.cpp  print.cpp  user input.cpp
Alphabet v1.0/src/alpha Funcs/: G.cpp  O.cpp  S.cpp  U.cpp
Alphabet v1.0/src/alpha_funcs/: D.cpp  I.cpp  K.cpp  M.cpp  T.cpp  X.cpp  Y.cpp
Quine-Mccluskey v1.0 - in C/helper_source/: ToBinary.cpp  is-exist.c
Quine-Mccluskey v1.0 - in C/include/: helper.h  quine.h
Quine-Mccluskey v1.0 - in C/source/: display-essential-table.c  display-groups.c  essential-implicants.c  main.c
